tests/fixtures/pass/loop_break_value.sc
let main(): i32 = { loop {
  break(42)
}
}
