tests/fixtures/fail/throw_in_plain_return.sc
let fail(): i32 = {
  throw true
}

let main(): i32 = 42
